--- a/portfolio.html
+++ b/portfolio.html
@@ -375,6 +375,30 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-field">
+          <form action="#" class="footer-form">
+            <p class="footer-title">Подпишитесь на рассылку</p>
+            <label for="mail"></label>
+            <input
+              type="mail"
+              id="mail"
+              class="footer-form-input"
+              placeholder="E-mail"
+              name="mail"
+              autofocus
+            />
+
+            <button class="footer-button current" type="submit">
+              <div class="btn-footer">
+                <span class="footer-tex-button">Подписаться</span>
+
+                <svg class="form-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-plane"></use>
+                </svg>
+              </div>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
