All changes home work 6

--- a/portfolio.html
+++ b/portfolio.html
@@ -378,7 +378,7 @@
         <div class="footer-form-field">
           <form action="#" class="footer-form">
             <p class="footer-title">Подпишитесь на рассылку</p>
-            <label for="mail"></label>
+            <label for="mail" class="footer-label"></label>
             <input
               type="mail"
               id="mail"
