Editing home work 6

--- a/index.html
+++ b/index.html
@@ -505,17 +505,14 @@
               class="footer-form-input"
               placeholder="E-mail"
               name="mail"
-              autofocus
             />
 
             <button class="footer-button current" type="submit">
-              <div class="btn-footer">
-                <span class="footer-tex-button">Подписаться</span>
+              Подписаться
 
-                <svg class="form-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-plane"></use>
-                </svg>
-              </div>
+              <svg class="form-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-plane"></use>
+              </svg>
             </button>
           </form>
         </div>
@@ -585,7 +582,7 @@
               class="modal-comment"
             ></textarea>
           </div>
-          <div class="modal-form-field">
+          <div class="modal-form-politics">
             <input
               type="checkbox"
               id="check"
