--- a/portfolio.html
+++ b/portfolio.html
@@ -385,17 +385,14 @@
               class="footer-form-input"
               placeholder="E-mail"
               name="mail"
-              autofocus
             />
 
             <button class="footer-button current" type="submit">
-              <div class="btn-footer">
-                <span class="footer-tex-button">Подписаться</span>
+              Подписаться
 
-                <svg class="form-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-plane"></use>
-                </svg>
-              </div>
+              <svg class="form-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-plane"></use>
+              </svg>
             </button>
           </form>
         </div>
